--- a/assets/css/mixins.less
+++ b/assets/css/mixins.less
@@ -25,9 +25,55 @@
 // SELF HOSTED GOOGLE FONT -> DSGVO
 ////////////////////////////////////////////////////////////////////////////////////
 
+    // @import url("https://p.typekit.net/p.css?s=1&k=rut5qrq&ht=tk&f=29977.29979.29984.30272.30275&a=4971454&app=typekit&e=css");
 
-	@font1: Arial, sans-serif;
-	@font2: Arial, sans-serif;
+    @font-face {
+        font-family:"Elido Bold";
+        src:url("https://use.typekit.net/af/3c3614/00000000000000003b9ae360/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff2"),
+            url("https://use.typekit.net/af/3c3614/00000000000000003b9ae360/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff"),
+            url("https://use.typekit.net/af/3c3614/00000000000000003b9ae360/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("opentype");
+        font-style:normal;
+        font-weight:700;
+    }
+
+    @font-face {
+        font-family:"Elido Book";
+        src:url("https://use.typekit.net/af/5b8066/00000000000000003b9ae362/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"),
+            url("https://use.typekit.net/af/5b8066/00000000000000003b9ae362/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"),
+            url("https://use.typekit.net/af/5b8066/00000000000000003b9ae362/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
+        font-style:normal;
+        font-weight:400;
+    }
+
+    @font-face {
+        font-family:"Elido Regular";
+        src:url("https://use.typekit.net/af/a87d23/00000000000000003b9ae367/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff2"),
+            url("https://use.typekit.net/af/a87d23/00000000000000003b9ae367/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff"),
+            url("https://use.typekit.net/af/a87d23/00000000000000003b9ae367/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("opentype");
+        font-style:normal;
+        font-weight:500;
+    }
+
+    @font-face {
+        font-family:"Condor Bold";
+        src:url("https://use.typekit.net/af/03e30e/00000000000000003b9ae48a/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff2"),
+            url("https://use.typekit.net/af/03e30e/00000000000000003b9ae48a/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff"),
+            url("https://use.typekit.net/af/03e30e/00000000000000003b9ae48a/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("opentype");
+        font-style:normal;
+        font-weight:700;
+    }
+
+    @font-face {
+        font-family:"Condor Regular";
+        src:url("https://use.typekit.net/af/f47187/00000000000000003b9ae487/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"),
+            url("https://use.typekit.net/af/f47187/00000000000000003b9ae487/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"),
+            url("https://use.typekit.net/af/f47187/00000000000000003b9ae487/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
+        font-style:normal;
+        font-weight:400;
+    }
+
+    @font1: 'Elido Regular', sans-serif;
+    @font2: 'Condor Regular', sans-serif;
 
 	@font-weight: 400;
 	@font-weight-bold: 700;
@@ -143,34 +189,58 @@
     .hl-1,
     .hl1 {
         .font-size-responsive(40px,40px,50px,50px,60px,60px,80px,80px);
-        font-weight: @font-weight-bold;
         font-family: @font1;
+        font-weight: @font-weight;
+        line-height: 1.25;
+
+        &:first-line {
+            font-weight: @font-weight-bold;
+        }
     }
 
     .hl-2,
     .hl2 {
         .font-size-responsive(34px,34px,50px,54px,60px,60px,80px,80px);
-        font-weight: @font-weight;
         font-family: @font1;
+        font-weight: @font-weight;
+        line-height: 1.25;
+
+        &:first-line {
+            font-weight: @font-weight-bold;
+        }
     }
 
     .hl-3,
     .hl3 {
         .font-size-responsive(28px,28px,34px,34px,40px,40px,60px,60px);
-        font-weight: @font-weight-bold;
         font-family: @font1;
+        font-weight: @font-weight;
+        line-height: 1.25;
+
+        &:first-line {
+            font-weight: @font-weight-bold;
+        }
     }
 
     .hl-4,
     .hl4 {
         .font-size-responsive(24px,24px,28px,28px,34px,34px,40px,40px);
-        font-weight: @font-weight;
         font-family: @font1;
+        font-weight: @font-weight;
+        line-height: 1.25;
+
+        &:first-line {
+            font-weight: @font-weight-bold;
+        }
     }
 
     .p, p, button {
         .font-size-responsive(14px,14px,16px,16px,18px,18px,20px,20px);
-        font-weight: @font-weight;
-        font-family: @font1;
         line-height: 1.4;
+        font-family: @font1;
+        font-weight: @font-weight;
+
+        &:first-line {
+            font-weight: @font-weight-bold;
+        }
     }
