--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,34 @@
 @import url(icon-font-custom.css);
+@font-face {
+  font-family: "Elido Bold";
+  src: url("https://use.typekit.net/af/3c3614/00000000000000003b9ae360/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff2"), url("https://use.typekit.net/af/3c3614/00000000000000003b9ae360/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff"), url("https://use.typekit.net/af/3c3614/00000000000000003b9ae360/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("opentype");
+  font-style: normal;
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Elido Book";
+  src: url("https://use.typekit.net/af/5b8066/00000000000000003b9ae362/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"), url("https://use.typekit.net/af/5b8066/00000000000000003b9ae362/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"), url("https://use.typekit.net/af/5b8066/00000000000000003b9ae362/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
+  font-style: normal;
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Elido Regular";
+  src: url("https://use.typekit.net/af/a87d23/00000000000000003b9ae367/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff2"), url("https://use.typekit.net/af/a87d23/00000000000000003b9ae367/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff"), url("https://use.typekit.net/af/a87d23/00000000000000003b9ae367/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("opentype");
+  font-style: normal;
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Condor Bold";
+  src: url("https://use.typekit.net/af/03e30e/00000000000000003b9ae48a/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff2"), url("https://use.typekit.net/af/03e30e/00000000000000003b9ae48a/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff"), url("https://use.typekit.net/af/03e30e/00000000000000003b9ae48a/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("opentype");
+  font-style: normal;
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Condor Regular";
+  src: url("https://use.typekit.net/af/f47187/00000000000000003b9ae487/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"), url("https://use.typekit.net/af/f47187/00000000000000003b9ae487/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"), url("https://use.typekit.net/af/f47187/00000000000000003b9ae487/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
+  font-style: normal;
+  font-weight: 400;
+}
 .font-size-body {
   font-size: 14px;
 }
@@ -150,10 +180,10 @@ h6 {
   }
 }
 .font1 {
-  font-family: Arial, sans-serif;
+  font-family: 'Elido Regular', sans-serif;
 }
 .font2 {
-  font-family: Arial, sans-serif;
+  font-family: 'Condor Regular', sans-serif;
   font-weight: 400;
 }
 .btn {
@@ -269,8 +299,9 @@ h6 {
 .hl-1,
 .hl1 {
   font-size: 40px;
-  font-weight: 700;
-  font-family: Arial, sans-serif;
+  font-family: 'Elido Regular', sans-serif;
+  font-weight: 400;
+  line-height: 1.25;
 }
 @media all and (min-width: 360px) and (max-width: 480px) {
   .hl-1,
@@ -326,11 +357,16 @@ h6 {
     font-size: 80px;
   }
 }
+.hl-1:first-line,
+.hl1:first-line {
+  font-weight: 700;
+}
 .hl-2,
 .hl2 {
   font-size: 34px;
+  font-family: 'Elido Regular', sans-serif;
   font-weight: 400;
-  font-family: Arial, sans-serif;
+  line-height: 1.25;
 }
 @media all and (min-width: 360px) and (max-width: 480px) {
   .hl-2,
@@ -386,11 +422,16 @@ h6 {
     font-size: 80px;
   }
 }
+.hl-2:first-line,
+.hl2:first-line {
+  font-weight: 700;
+}
 .hl-3,
 .hl3 {
   font-size: 28px;
-  font-weight: 700;
-  font-family: Arial, sans-serif;
+  font-family: 'Elido Regular', sans-serif;
+  font-weight: 400;
+  line-height: 1.25;
 }
 @media all and (min-width: 360px) and (max-width: 480px) {
   .hl-3,
@@ -445,12 +486,17 @@ h6 {
   .hl3 {
     font-size: 60px;
   }
+}
+.hl-3:first-line,
+.hl3:first-line {
+  font-weight: 700;
 }
 .hl-4,
 .hl4 {
   font-size: 24px;
+  font-family: 'Elido Regular', sans-serif;
   font-weight: 400;
-  font-family: Arial, sans-serif;
+  line-height: 1.25;
 }
 @media all and (min-width: 360px) and (max-width: 480px) {
   .hl-4,
@@ -505,14 +551,18 @@ h6 {
   .hl4 {
     font-size: 40px;
   }
+}
+.hl-4:first-line,
+.hl4:first-line {
+  font-weight: 700;
 }
 .p,
 p,
 button {
   font-size: 14px;
-  font-weight: 400;
-  font-family: Arial, sans-serif;
   line-height: 1.4;
+  font-family: 'Elido Regular', sans-serif;
+  font-weight: 400;
 }
 @media all and (min-width: 360px) and (max-width: 480px) {
   .p,
@@ -576,6 +626,11 @@ button {
   button {
     font-size: 20px;
   }
+}
+.p:first-line,
+p:first-line,
+button:first-line {
+  font-weight: 700;
 }
 :focus {
   outline: none;
@@ -647,6 +702,155 @@ a:hover {
   text-decoration: none;
   color: #333;
 }
+header#main-header {
+  background-color: #fff;
+}
+header#main-header nav#main-nav ul {
+  margin-top: 4px;
+}
+header#main-header nav#main-nav ul > li a {
+  color: #033142;
+  font-size: 18px;
+}
+header#main-header nav#main-nav ul > li a:hover {
+  color: #033142;
+  border-bottom: 3px solid #033142;
+}
+header#main-header nav#main-nav ul > li.current-menu-item > a,
+header#main-header nav#main-nav ul > li.current-menu-parent > a {
+  font-weight: bold;
+  color: #033142;
+  border-bottom: 3px solid #033142;
+}
+header#main-header .logo {
+  height: 40px;
+  top: 5px;
+  margin-right: 40px;
+}
+header#main-header .c-hamburger span {
+  background-color: #033142;
+}
+header#main-header .c-hamburger span:before,
+header#main-header .c-hamburger span:after {
+  background-color: #033142;
+}
+header#main-header .shopping-cart-btn {
+  font-size: 18px;
+  padding: 20px 0 20px 30px;
+  position: relative;
+}
+header#main-header .shopping-cart-btn:hover {
+  color: #033142;
+  border-bottom: 3px solid #033142;
+}
+header#main-header .shopping-cart-btn .em-shopping-cart {
+  height: 20px;
+  width: 30px;
+  background-image: url("../img/cart.svg");
+  display: block;
+  position: absolute;
+  top: 18px;
+  left: 0;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+footer#main-footer {
+  background-color: #0e1426;
+  color: #fff;
+}
+footer#main-footer:after {
+  content: "";
+  position: absolute;
+  top: -80px;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  transform: rotate(180deg);
+  background-image: url(../../plugins/woocommerce/assets/img/bali-background-2.png);
+  background-size: contain;
+  background-repeat: repeat-x;
+}
+footer#main-footer:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+  background-image: url("../img/module-content-repeater.svg");
+  background-size: contain;
+  background-repeat: repeat-x;
+}
+footer#main-footer a {
+  color: #fff;
+}
+footer#main-footer .address nav {
+  margin-bottom: 20px;
+}
+footer#main-footer .address nav p {
+  margin-bottom: 20px;
+}
+footer#main-footer .address nav a {
+  display: block;
+}
+footer#main-footer .address .logo {
+  margin-bottom: 20px;
+}
+footer#main-footer .address .logo-color {
+  fill: red;
+}
+footer#main-footer .address .em-social-media-channels a {
+  background-color: #fff;
+  border-color: #fff;
+  color: #0e1426;
+}
+footer#main-footer strong {
+  padding: 0;
+  margin: 0;
+  line-height: 3.13;
+  letter-spacing: 1.1px;
+  color: #999;
+  height: 50px;
+  display: block;
+  text-transform: uppercase;
+}
+footer#main-footer nav {
+  padding: 0;
+  margin: 0;
+}
+footer#main-footer nav ul {
+  padding: 0;
+  margin: 0;
+}
+footer#main-footer nav ul li {
+  padding: 0;
+  margin: 0;
+}
+footer#main-footer nav ul li.current-menu-item > a,
+footer#main-footer nav ul li.current-menu-parent > a {
+  color: #999;
+}
+footer#main-footer nav ul li a {
+  line-height: 2.25;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+footer#main-footer nav ul li a:hover {
+  color: #999;
+}
+body.starts-with-hero #shop-archive-hero {
+  margin-top: -102px !important;
+}
+body.starts-with-hero #shop-archive-hero .bg-photo .inner-full {
+  padding-top: 102px !important;
+}
+body div#main {
+  overflow: unset;
+}
+body div#main section:first-child {
+  padding-top: 102px !important;
+}
 .em-social-media-channels a {
   background: #000;
   color: #FFF;
@@ -656,4 +860,159 @@ a:hover {
 .em-social-media-channels a:hover {
   background: #FFF;
   color: #000;
+}
+.em-hero-simple {
+  position: relative;
+  margin-bottom: 80px;
+}
+.em-hero-simple:after {
+  content: "";
+  position: absolute;
+  bottom: -80px;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background-image: url(../../plugins/woocommerce/assets/img/bali-background-2.png);
+  background-size: contain;
+  background-repeat: repeat-x;
+}
+.em-hero-simple .inner-full .inner-wrapper {
+  width: 1200px;
+  color: #fff;
+  text-align: center;
+}
+.em-content-repeater {
+  color: #fff;
+}
+.em-content-repeater a {
+  color: #fff;
+  margin-bottom: 40px;
+  font-size: 14px;
+}
+@media all and (min-width: 360px) and (max-width: 480px) {
+  .em-content-repeater a {
+    font-size: 14px;
+  }
+}
+@media all and (min-width: 480px) and (max-width: 768px) {
+  .em-content-repeater a {
+    font-size: 14px;
+  }
+}
+@media all and (min-width: 768px) and (max-width: 1024px) {
+  .em-content-repeater a {
+    font-size: 16px;
+  }
+}
+@media all and (min-width: 1024px) and (max-width: 1280px) {
+  .em-content-repeater a {
+    font-size: 16px;
+  }
+}
+@media all and (min-width: 1280px) and (max-width: 1468px) {
+  .em-content-repeater a {
+    font-size: 18px;
+  }
+}
+@media all and (min-width: 1468px) and (max-width: 1680px) {
+  .em-content-repeater a {
+    font-size: 18px;
+  }
+}
+@media all and (min-width: 1680px) and (max-width: 1920px) {
+  .em-content-repeater a {
+    font-size: 20px;
+  }
+}
+@media all and (min-width: 1920px) {
+  .em-content-repeater a {
+    font-size: 20px;
+  }
+}
+@media all and (min-width: 2200px) {
+  .em-content-repeater a {
+    font-size: 20px;
+  }
+}
+.em-content-repeater a.btn-line-left:before {
+  background-color: #fff;
+}
+.em-content-repeater .row {
+  position: relative;
+  margin-bottom: 100px;
+}
+@media all and (min-width: 769px) {
+  .em-content-repeater .row {
+    left: 30px;
+  }
+}
+.em-content-repeater .row:last-child {
+  margin-bottom: 0;
+}
+.em-content-repeater .row .item {
+  order: 1;
+  position: relative;
+  background-clip: unset;
+  padding: 0;
+}
+@media all and (min-width: 769px) {
+  .em-content-repeater .row .item.order-2 {
+    order: 2;
+  }
+}
+.em-content-repeater .row .item .trademark {
+  position: absolute;
+  bottom: -50px;
+  right: 20px;
+  width: 100px;
+  height: 100px;
+}
+.em-content-repeater .row .item .logo-headline {
+  margin-bottom: 40px;
+}
+.em-content-repeater .row .item .logo-headline > img {
+  width: 50%;
+  margin: 0 auto;
+  display: block;
+}
+.em-content-repeater .row .item .content {
+  margin-bottom: 40px;
+}
+.em-content-repeater .row .item-text {
+  padding: 30px;
+}
+@media all and (min-width: 769px) {
+  .em-content-repeater .row .item-image > figure {
+    position: relative;
+    top: -30px;
+    left: -30px;
+  }
+  .em-content-repeater .row .item-image:before {
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-image: url("../img/module-content-repeater.svg");
+    background-size: cover;
+    background-repeat: repeat;
+    -webkit-transition: all 0.6s ease;
+    transition: all 0.6s ease;
+    background-position: top right;
+  }
+}
+@media all and (min-width: 769px) {
+  .em-content-repeater .row.flipped {
+    left: -30px;
+  }
+  .em-content-repeater .row.flipped .item-image > figure {
+    top: auto;
+    left: auto;
+    bottom: -30px;
+    right: -30px;
+  }
+  .em-content-repeater .row.flipped .item-image:before {
+    background-position: top left;
+  }
 }
