--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,30 @@
 @import url(icon-font-custom.css);
 @font-face {
-  font-family: "Elido Bold";
+  font-family: "Elido";
   src: url("https://use.typekit.net/af/3c3614/00000000000000003b9ae360/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff2"), url("https://use.typekit.net/af/3c3614/00000000000000003b9ae360/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff"), url("https://use.typekit.net/af/3c3614/00000000000000003b9ae360/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("opentype");
   font-style: normal;
   font-weight: 700;
 }
 @font-face {
-  font-family: "Elido Book";
-  src: url("https://use.typekit.net/af/5b8066/00000000000000003b9ae362/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"), url("https://use.typekit.net/af/5b8066/00000000000000003b9ae362/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"), url("https://use.typekit.net/af/5b8066/00000000000000003b9ae362/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
-  font-style: normal;
-  font-weight: 400;
-}
-@font-face {
-  font-family: "Elido Regular";
+  font-family: "Elido";
   src: url("https://use.typekit.net/af/a87d23/00000000000000003b9ae367/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff2"), url("https://use.typekit.net/af/a87d23/00000000000000003b9ae367/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff"), url("https://use.typekit.net/af/a87d23/00000000000000003b9ae367/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("opentype");
   font-style: normal;
   font-weight: 500;
 }
 @font-face {
-  font-family: "Condor Bold";
+  font-family: "Elido";
+  src: url("https://use.typekit.net/af/5b8066/00000000000000003b9ae362/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"), url("https://use.typekit.net/af/5b8066/00000000000000003b9ae362/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"), url("https://use.typekit.net/af/5b8066/00000000000000003b9ae362/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
+  font-style: normal;
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Condor";
   src: url("https://use.typekit.net/af/03e30e/00000000000000003b9ae48a/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff2"), url("https://use.typekit.net/af/03e30e/00000000000000003b9ae48a/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff"), url("https://use.typekit.net/af/03e30e/00000000000000003b9ae48a/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("opentype");
   font-style: normal;
   font-weight: 700;
 }
 @font-face {
-  font-family: "Condor Regular";
+  font-family: "Condor";
   src: url("https://use.typekit.net/af/f47187/00000000000000003b9ae487/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"), url("https://use.typekit.net/af/f47187/00000000000000003b9ae487/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"), url("https://use.typekit.net/af/f47187/00000000000000003b9ae487/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
   font-style: normal;
   font-weight: 400;
@@ -180,11 +180,10 @@ h6 {
   }
 }
 .font1 {
-  font-family: 'Elido Regular', sans-serif;
+  font-family: 'Elido', sans-serif;
 }
 .font2 {
-  font-family: 'Condor Regular', sans-serif;
-  font-weight: 400;
+  font-family: 'Condor', sans-serif;
 }
 .btn {
   background-color: #033142;
@@ -197,9 +196,10 @@ h6 {
   text-align: center;
 }
 .btn:hover {
-  background-color: #FFF;
-  color: #033142;
+  background-color: #033142;
+  color: #FFF;
   border: 1px solid #033142;
+  opacity: 0.8;
 }
 .btn.btn-outline-black {
   background-color: transparent;
@@ -296,10 +296,12 @@ h6 {
   -moz-box-shadow: 2px 2px 20px 4px rgba(0, 0, 0, 0.15);
   box-shadow: 2px 2px 20px 4px rgba(0, 0, 0, 0.15);
 }
+.first-line-bold:first-line {
+  font-weight: 700;
+}
 .hl-1,
 .hl1 {
   font-size: 40px;
-  font-family: 'Elido Regular', sans-serif;
   font-weight: 400;
   line-height: 1.25;
 }
@@ -357,14 +359,9 @@ h6 {
     font-size: 80px;
   }
 }
-.hl-1:first-line,
-.hl1:first-line {
-  font-weight: 700;
-}
 .hl-2,
 .hl2 {
   font-size: 34px;
-  font-family: 'Elido Regular', sans-serif;
   font-weight: 400;
   line-height: 1.25;
 }
@@ -422,14 +419,9 @@ h6 {
     font-size: 80px;
   }
 }
-.hl-2:first-line,
-.hl2:first-line {
-  font-weight: 700;
-}
 .hl-3,
 .hl3 {
   font-size: 28px;
-  font-family: 'Elido Regular', sans-serif;
   font-weight: 400;
   line-height: 1.25;
 }
@@ -486,15 +478,10 @@ h6 {
   .hl3 {
     font-size: 60px;
   }
-}
-.hl-3:first-line,
-.hl3:first-line {
-  font-weight: 700;
 }
 .hl-4,
 .hl4 {
   font-size: 24px;
-  font-family: 'Elido Regular', sans-serif;
   font-weight: 400;
   line-height: 1.25;
 }
@@ -551,17 +538,12 @@ h6 {
   .hl4 {
     font-size: 40px;
   }
-}
-.hl-4:first-line,
-.hl4:first-line {
-  font-weight: 700;
 }
 .p,
 p,
 button {
   font-size: 14px;
   line-height: 1.4;
-  font-family: 'Elido Regular', sans-serif;
   font-weight: 400;
 }
 @media all and (min-width: 360px) and (max-width: 480px) {
@@ -626,11 +608,6 @@ button {
   button {
     font-size: 20px;
   }
-}
-.p:first-line,
-p:first-line,
-button:first-line {
-  font-weight: 700;
 }
 :focus {
   outline: none;
@@ -702,15 +679,60 @@ a:hover {
   text-decoration: none;
   color: #333;
 }
-header#main-header {
+@media all and (max-width: 768px) {
+  .mobile-hide {
+    display: none;
+  }
+}
+.fs_eichmeister {
+  background-color: transparent;
+  border-bottom: 1px solid #fff;
+}
+.fs_eichmeister button {
+  border: 0;
+  padding: 0;
+  margin: 0;
+  background-color: transparent;
+  color: #fff;
+  font-weight: normal;
+}
+.fs_eichmeister button.fs-dropdown-selected:after {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  content: "\f078";
+  position: absolute;
+  right: 0;
+  top: 8px;
+  font-weight: lighter;
+  font-size: 10px;
+}
+.fs_eichmeister .fs-dropdown-options {
   background-color: #fff;
 }
-header#main-header nav#main-nav ul {
-  margin-top: 4px;
+.fs_eichmeister .fs-dropdown-options .fs-dropdown-item:hover {
+  background: #ddd;
+}
+.fs_eichmeister .fs-dropdown-options button {
+  border: 0;
+  padding: 10px;
+  margin: 0;
+  border-bottom: 1px solid #dedede;
+  color: #000;
+}
+.fs_eichmeister .fs-dropdown-options button:last-child {
+  border-bottom: 0;
+}
+header#main-header {
+  background-color: #fff;
 }
 header#main-header nav#main-nav ul > li a {
   color: #033142;
   font-size: 18px;
+  padding: 22px 0;
 }
 header#main-header nav#main-nav ul > li a:hover {
   color: #033142;
@@ -736,12 +758,19 @@ header#main-header .c-hamburger span:after {
 }
 header#main-header .shopping-cart-btn {
   font-size: 18px;
-  padding: 20px 0 20px 30px;
+  padding: 16px 0 16px 30px;
   position: relative;
+  margin-left: 15px;
 }
-header#main-header .shopping-cart-btn:hover {
-  color: #033142;
-  border-bottom: 3px solid #033142;
+@media all and (min-width: 769px) {
+  header#main-header .shopping-cart-btn {
+    margin-right: 15px;
+  }
+}
+@media all and (min-width: 769px) {
+  header#main-header .shopping-cart-btn:hover {
+    color: #033142;
+  }
 }
 header#main-header .shopping-cart-btn .em-shopping-cart {
   height: 20px;
@@ -749,22 +778,26 @@ header#main-header .shopping-cart-btn .em-shopping-cart {
   background-image: url("../img/cart.svg");
   display: block;
   position: absolute;
-  top: 18px;
+  top: 12px;
   left: 0;
   background-size: contain;
   background-repeat: no-repeat;
 }
+header#main-header .shopping-cart-btn .cart-item-count {
+  background: #000;
+}
 footer#main-footer {
   background-color: #0e1426;
   color: #fff;
+  padding-top: 40px;
 }
 footer#main-footer:after {
   content: "";
   position: absolute;
-  top: -80px;
+  top: -1px;
   left: 0;
   width: 100%;
-  height: 100px;
+  height: 40px;
   transform: rotate(180deg);
   background-image: url(../../plugins/woocommerce/assets/img/bali-background-2.png);
   background-size: contain;
@@ -801,9 +834,13 @@ footer#main-footer .address .logo-color {
   fill: red;
 }
 footer#main-footer .address .em-social-media-channels a {
+  margin-left: 5px;
   background-color: #fff;
   border-color: #fff;
   color: #0e1426;
+}
+footer#main-footer .address .em-social-media-channels a:hover {
+  opacity: 0.8;
 }
 footer#main-footer strong {
   padding: 0;
@@ -851,6 +888,10 @@ body div#main {
 body div#main section:first-child {
   padding-top: 102px !important;
 }
+body.woocommerce-cart .woocommerce,
+body.woocommerce-checkout .woocommerce {
+  padding-top: 32px !important;
+}
 .em-social-media-channels a {
   background: #000;
   color: #FFF;
@@ -863,18 +904,18 @@ body div#main section:first-child {
 }
 .em-hero-simple {
   position: relative;
-  margin-bottom: 80px;
 }
 .em-hero-simple:after {
   content: "";
   position: absolute;
-  bottom: -80px;
+  bottom: -1px;
   left: 0;
   width: 100%;
   height: 100px;
   background-image: url(../../plugins/woocommerce/assets/img/bali-background-2.png);
   background-size: contain;
   background-repeat: repeat-x;
+  z-index: 0;
 }
 .em-hero-simple .inner-full .inner-wrapper {
   width: 1200px;
