--- a/plugins/woocommerce/assets/css/style-wc-child.less
+++ b/plugins/woocommerce/assets/css/style-wc-child.less
@@ -55,24 +55,15 @@
   				background-repeat: repeat;
   				z-index: -5;
 			}
-
-			&:after {
-				content: "";
-				position: absolute;
-				bottom: 0;
-				left: 0;
-				width: 100%;
-				height: 100px;
-  				background-image: url("../img/bali-background-2.png");
-  				background-size: contain;
-  				background-repeat: repeat-x;
-  				z-index: -2;
-			}
 		}
 
 		/******** Product summary ********/
 		.summary {
 			color: @white;
+
+			.hl1 {
+				font-family: @font2;
+			}
 		}
 
 		/******** Product Attributes ********/
@@ -104,10 +95,21 @@
 			.single_variation_wrap {
 				input.qty {
 					width: 60px;
+					height: 44px;
 					background-color: transparent;
 					border: 1px solid @white;
 					color: @white;
 					padding: 13px 10px;
+					font-size: 16px;
+					line-height: 1em;
+				}				
+
+				.btn, .button {
+					height: 44px;
+					font-size: 16px;
+					line-height: 1em;
+					padding: 13px 10px;
+					border: 1px solid transparent;
 				}
 			}
 		}
@@ -257,6 +259,32 @@
 				}
 			}
 		}
+
+		/******** Related Products ********/
+		#related-products { 
+
+			h4 {
+				text-align: center;
+				margin-bottom: 60px;
+			}
+
+			h5 {
+				text-align: center;
+	            margin-top: -40px;
+				margin-bottom: 60px;
+			}
+
+			&:before,
+			&:after {
+				display: table;
+				content: "";
+				clear: both;
+			}
+
+			.btn-line-left {
+				margin-top: 40px;
+			}
+		}
 	}
 
 /////////////////////////////////////////////////////////////////////////////////
@@ -300,6 +328,10 @@
 			transition: all .6s ease;
 		}
 
+		.content {
+			overflow: hidden;
+		}
+
 		.flavor,
 		.region {
 			text-align: center;
@@ -312,6 +344,7 @@
 			text-align: center;
 			color: @white;
 			display: block;
+			font-family: @font2;
 		}
 
 		.pt-images {
@@ -322,7 +355,7 @@
 
 		.description {
 			position: relative;
-			margin-bottom: 20px;
+			padding-bottom: 20px;
 		}
 
 		.more-information {
