--- a/assets/css/mixins.less
+++ b/assets/css/mixins.less
@@ -146,15 +146,15 @@
         position: relative;
         display: block;
         text-align: right;
-        padding-left: 100px;
+        padding-left: 5em;
         overflow: auto;
         float: right;
 
         &:before {
             content: "";
             position: absolute;
-            height: 3px;
-            width: 80px;
+            height: 0.1em;
+            width: 4em;
             background-color: @darkblue;
             top: 50%;
             left: 0;
