--- a/assets/css/style-lp-1.less
+++ b/assets/css/style-lp-1.less
@@ -1,9 +1,5 @@
 @import (reference) url('mixins.less');
 
-.main-bg {
-	background: #FFF;
-}
-
 ////////////////////////////////////////////////////////////////////////////////////
 // ITNRO SECTION
 ////////////////////////////////////////////////////////////////////////////////////
@@ -11,569 +7,30 @@
 	section#intro {
 		position: relative;
 
-		// Color gradient opacity overlay
-		&:before {
-			content: '';
-			position: absolute;
-			z-index: 0;
-			top: 0;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			width: 100%;
-			height: 100%;
-			.gradient-left-to-right;
-		}
 
-		.em-hero-simple {
-
-			.inner-full {
-				.fixed-bg;
-
-		        .inner-wrapper {
-		            width: 1400px;
-		            text-align: center;
-
-					h1 {
-						color: #FFF;
-						.hl-big;
-						line-height: 1;
-						display: inline-block;
-
-			            .hl-1 {
-							.hl-big.hl-big-light;
-			            }
-
-			            .hl-2 {
-							.hl-big;
-							position: relative;
-							display: inline-block;
-
-							@media all and (min-width: @breakpoint7) {
-								// margin-top: 30px;
-							}
-							
-							/*
-							&:after {
-								content: '';
-								width: 5px;
-								height: 100%;
-								background: @blue;
-								position: relative;
-								top: 0;
-								margin-left: 15px;
-							}
-							*/
-			            }
-
-			            /* The typewriter cursor effect */
-						@keyframes blink-caret {
-						  from, to { opacity: 0 }
-						  50% { opacity: 1; }
-						}
-
-			            .typed-cursor {
-			            	// display: none;
-			            	.font-size-responsive(30px, 30px, 40px, 40px, 50px, 70px, 120px, 120px);
-			            	color: @blue;
-			            	background: @blue;
-			            	margin-left: 15px;
-			            	position: relative;
-			            	top: -2px;
-			            	width: 12px;
-			            	height: 100%;
-							animation: 
-							    blink-caret .65s step-end infinite;
-			            }
-
-			            .hl-1,
-			            .hl-2 {
-			            	.font-size-responsive(30px, 30px, 40px, 40px, 50px, 70px, 120px, 120px);
-			            }
-			        }
-
-			        .desc {
-			        	color: #FFF;
-			        }
-
-		            .cta-1 {
-		            	.cta.cta-blue;
-		            }
-
-		            .cta-2 {
-		            	.cta.cta-outline-white;
-		            }
-		        }
-		    }
-	    }
-	}
-
-////////////////////////////////////////////////////////////////////////////////////
-// ABOUT SECTION
-////////////////////////////////////////////////////////////////////////////////////
-
-	section#about {
-		position: relative;
-		padding: 50px 0;
-		text-align: center;
-
-		@media screen and (min-width: @breakpoint3) {
-			padding: 80px 0 100px;
-		}
-
-		// BLUE LINE
-		&::before {
-			content: '';
-			position: absolute;
-			width: 1px;
-			height: 70px;
-			top: -35px;
-			left: 50%;
-			background-color: @color-highlight;
-
-			@media screen and (min-width: @breakpoint3) {
-				height: 130px;
-				top: -70px;
-			}
-		}
-		
-		p {
-			font-weight: 700;
-			margin-bottom: 30px;
-			.font-size-responsive(20px, 20px, 30px, 30px, 35px, 35px, 40px, 40px);
-			line-height: 1.3;
-			
-			@media screen and (min-width: @breakpoint3) {
-				margin-bottom: 50px;
+		.inner-full {
+			.inner-wrapper {
+				top: 60%;
 			}
 		}
 
-	}
+		.hero-teaser {
+			position: relative;
+			max-width: 800px;
+			margin: 0 auto;
 
-////////////////////////////////////////////////////////////////////////////////////
-// SERVICES SECTION
-////////////////////////////////////////////////////////////////////////////////////
-
-	section#services {
-		position: relative;
-		text-align: center;
-		color: @color-neg;
-		
-		@media screen and (min-width: @breakpoint3) {
-			padding-bottom: 50px;
-		}
-		
-		// BLUE LINE
-		&::before {
-			content: '';
-			position: absolute;
-			width: 3px;
-			height: 70px;
-			top: 0;
-			left: 50%;
-			margin-left: -1.5px;
-			background-color: @color-neg;
-		}
-		
-		.row {
-			padding: 50px 30px 0 30px;
-			margin: 0;
-			
-			@media screen and (min-width: @breakpoint3) {
-				padding-top: 0;
-			}
-			
-			[class*="col"] {
-				padding: 0;
-				
-				#foldable-content {
-					margin-bottom: 30px;
-
-					.item {
-						border: none;
-						color: fade(@color-neg, 50%);
-
-						&.active {
-							color: @color-neg;
-						}
-
-						.header {
-							border: none;
-							font-family: @font2;
-							font-weight: 700;
-							text-transform: uppercase;
-							font-size: 25px;
-							.font-size-responsive(25px, 25px, 30px, 30px, 40px, 40px, 50px, 50px);
-							line-height: normal;
-
-							&:hover {
-								color: @color-neg;
-							}
-						}
-
-						.content {
-							margin-top: 0;
-							
-							p {
-								font-weight: 300;
-								font-size: 17px;
-								line-height: 1.4;
-								margin-top: 0;
-							}
-						}
-					}
-				}	
-			}
-		}
-	}
-
-////////////////////////////////////////////////////////////////////////////////////
-// CLIENTS SECTION
-////////////////////////////////////////////////////////////////////////////////////
-
-	section#clients {
-		position: relative;
-		padding: 100px 0 0;
-		text-align: center;
-		
-		@media screen and (min-width: @breakpoint3) {
-			padding: 150px 0 0;
-		}
-		
-		// BLUE LINE
-		&::before {
-			content: '';
-			position: absolute;
-			width: 1px;
-			height: 70px;
-			top: 15px;
-			left: 50%;
-			background-color: @color-highlight;
-			
-			@media screen and (min-width: @breakpoint3) {
-				height: 100px;
-				top: 25px;
-			}
-		}
-		
-		p {
-			font-weight: 700;
-			margin-bottom: 60px;
-			.font-size-responsive(20px, 20px, 30px, 30px, 35px, 35px, 40px, 40px);
-			line-height: 1.3;
-		}
-		
-		.row {
-			margin-top: 0;
-			margin-left: 0;
-			border: 1px solid fade(black, 20%);	
-		}
-		
-		[class*="col"] {
-			height: 20vw;
-			max-height: 129px;
-			background-size: contain!important;
-			opacity: 0.5;
-			
-			@media screen and (min-width: @breakpoint3) {
-				height: 15vw;
-				max-height: 174px;
-				background-size: 80%!important;
-			}
-			
-			& + [class*="col"] {
-				border-top: 1px solid fade(black, 20%);	
-				
-				@media screen and (min-width: @breakpoint3) {
-					border-left: 1px solid fade(black, 30%);	
-					
-					&:nth-child(2),
-					&:nth-child(3),
-					&:nth-child(4) {
-						border-top: none;
-					}
-					
-					&:nth-child(4n+1) {
-						border-left: none;
-					}
-				}
-			}
-		}
-	}
-
-////////////////////////////////////////////////////////////////////////////////////
-// CATEGORIES SECTION
-////////////////////////////////////////////////////////////////////////////////////
-
-	section#categories {
-		position: relative;
-		padding: 100px 0 0;
-		text-align: center;
-		
-		@media screen and (min-width: @breakpoint3) {
-			padding: 150px 0 0;
-		}
-		
-		// BLUE LINE
-		&::before {
-			content: '';
-			position: absolute;
-			width: 1px;
-			height: 70px;
-			top: 15px;
-			left: 50%;
-			background-color: @color-highlight;
-			
-			@media screen and (min-width: @breakpoint3) {
-				height: 100px;
-				top: 25px;
-			}
-		}
-		
-		h3 {
-			
-		}
-		
-		h2 {
-			margin-top: 20px;
-			margin-bottom: 60px;
-		}
-		
-		.row {
-			margin-top: 0;
-			margin-left: 0;
-			color: @color-neg;
-			
-			[class*="col"] {
-				padding: 50px;
-				
-				@media screen and (min-width: @breakpoint3) {
-					padding: 80px 2%;
-					text-align: left;
-				}
-				
-				@media screen and (min-width: @breakpoint4) {
-					padding: 80px 40px;
-				}
-				
-				& + [class*="col"] {
-					border-top: 1px solid fade(@color-neg, 30px);
-					
-					@media screen and (min-width: @breakpoint3) {
-						border-top: 0px solid fade(@color-neg, 30px);
-						border-left: 1px solid fade(@color-neg, 30px);
-					}
-				}
-				
-				h4 {
-					margin-bottom: 60px;
-					font-family: @font2;
-					font-weight: 700;
-					text-transform: uppercase;
-					font-size: 25px;
-				}
-				
-				p {
-					font-weight: 300;
-					.font-size-responsive(17px, 17px, 13px, 14px, 16px, 18px, 20px, 22px);
-					line-height: 1.4;
-				}
-			}
-			
-			.cta {
+			img {
 				display: block;
-				margin: 0 auto -23px auto;
-				-webkit-box-shadow: 0 0 10px fade(@color-pos, 50%);box-shadow: 0 0 10px fade(@color-pos, 50%);
-				
-				@media screen and (min-width: @breakpoint3) {
-					position: absolute;
-					margin: 0;
-					bottom: -23px;
-					left: 50%;
-					-webkit-transform: translateX(-50%);
-					transform: translateX(-50%);
-					z-index: 1;
-				}
+				width: 100%;
+				height: auto;
+				margin: 0 auto;
+			}
+			.hero-teaser-link {
+				position: absolute;
+				display: block;
+				bottom: 0;
+				right: 0;
+				.font-size-responsive(14px, 14px, 14px, 16px, 16px, 16px, 18px, 20px);
 			}
 		}
 	}
-
-////////////////////////////////////////////////////////////////////////////////////
-// MISSION SECTION
-////////////////////////////////////////////////////////////////////////////////////
-
-	section#mission {
-		position: relative;
-		padding: 123px 0 100px;
-		text-align: center;
-		
-		@media screen and (min-width: @breakpoint3) {
-			padding: 173px 0 100px;
-		}
-		
-		// BLUE LINE
-		&::before {
-			content: '';
-			position: absolute;
-			width: 1px;
-			height: 70px;
-			top: 35px;
-			left: 50%;
-			background-color: @color-highlight;
-			
-			@media screen and (min-width: @breakpoint3) {
-				height: 100px;
-				top: 45px;
-			}
-		}
-		
-		p {
-			font-weight: 700;
-			margin-bottom: 30px;
-			.font-size-responsive(20px, 20px, 30px, 30px, 35px, 35px, 40px, 40px);
-			line-height: 1.3;
-		}
-		
-		[class*="col"] {
-		
-			.ceo-avatar {
-				width: 125px;
-				height: 125px;
-				border-radius: 50%;
-				margin: 20px auto 0;
-			}
-
-			h3 {
-				margin-top: 20px;
-				font-family: @font2;
-				font-size: 23px;
-				color: @color-highlight;
-				font-weight: 400;
-			}
-			
-			p {
-				margin-top: 5px;
-				font-weight: 400;
-				font-size: 19px;
-				line-height: 1.4;
-			}
-		}
-	}
-
-////////////////////////////////////////////////////////////////////////////////////
-// STATS SECTION
-////////////////////////////////////////////////////////////////////////////////////
-
-	section#stats {
-		position: relative;
-		padding: 50px;
-		text-align: center;
-		color: @color-neg;
-		.fixed-bg;
-		-webkit-backface-visibility: hidden;
-		backface-visibility: hidden;
-		
-		@media screen and (min-width: @breakpoint3) {
-			padding: 50px 0;
-		}
-		
-		@media screen and (min-width: @breakpoint3) {
-			padding: 100px 0;
-		}
-		
-		// OVERLAY
-		&::before {
-			content: '';
-			display: block;
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			left: 0;
-			top: 0;
-			background: url('../images/logo-symbol-overlay.png') -150px 150px no-repeat;
-			background-size: 600px;
-			
-			@media screen and (min-width: @breakpoint4) {
-				background-position: -150px 150px;
-				background-size: 40%;
-			}
-		}
-		
-		.row {
-			margin: 0; 
-			
-			[class*="col"] {
-				padding: 40px 0;
-
-				@media screen and (min-width: @breakpoint3) {
-					padding: 0 30px;
-					margin: 40px 0;
-				}
-				
-				& + [class*="col"] {
-					border-top: 1px solid @color-neg;
-					
-					@media screen and (min-width: @breakpoint3) {
-						border-top: 0 solid @color-neg;
-						border-left: 1px solid @color-neg;
-					}
-				}
-				
-				h4 {
-					font-family: @font2;
-					font-weight: 700;
-					text-transform: uppercase;
-					font-size: 70px;
-				}
-
-				p {
-					font-weight: 300;
-					font-size: 20px;
-					line-height: 1.4;
-					
-					@media screen and (min-width: @breakpoint3) {
-						padding-bottom: 0;
-					}
-				}
-				
-				.odometer-formatting-mark { display: none }
-			}
-		}
-	}
-
-////////////////////////////////////////////////////////////////////////////////////
-// CAREER SECTION
-////////////////////////////////////////////////////////////////////////////////////
-
-	section#career {
-		position: relative;
-		padding: 100px 0;
-		text-align: center;
-
-		@media screen and (min-width: @breakpoint3) {
-			padding: 150px 0 100px;
-		}
-		
-		// BLUE LINE
-		&::before {
-			content: '';
-			position: absolute;
-			width: 1px;
-			height: 70px;
-			top: 15px;
-			left: 50%;
-			background-color: @color-highlight;
-			
-			@media screen and (min-width: @breakpoint3) {
-				height: 100px;
-				top: 25px;
-			}
-		}
-		
-		h2 {
-			margin-top: 20px;
-			margin-bottom: 60px;
-		}
-		
-	}
-
