--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -17,7 +17,7 @@
         letter-spacing: 0.05em;
         font-size: 20px;
         line-height: 1.6;
-        color: #000;
+        color: #033142;
         .font-size-responsive(14px, 14px, 14px, 16px, 16px, 16px, 18px, 18px);
     }
 
@@ -89,7 +89,7 @@
                 padding: 10px;
                 margin: 0;
                 border-bottom: 1px solid #dedede;
-                color: #000;
+                color: #033142;
 
                 &:last-child {
                     border-bottom: 0;
@@ -175,7 +175,7 @@
             }
 
             .cart-item-count {
-                background: #000;
+                background: #033142;
             }
         }
     }
@@ -192,12 +192,12 @@
         &:after {
             content: "";
             position: absolute;
-            top: -1px;
+            top: 0;
             left: 0;
             width: 100%;
-            height: 40px;
+            height: 90px;
             transform: rotate(180deg);
-            background-image: url(../../plugins/woocommerce/assets/img/bali-background-2.png);
+            background-image: url(../img/bali-background-2.png);
             background-size: contain;
             background-repeat: repeat-x;
         }
@@ -302,10 +302,9 @@
 
     body {
         &.starts-with-hero {
-            #shop-archive-hero {
+            .em-hero-simple {
                 margin-top: -102px !important;
-                
-                .bg-photo {
+                &.bg-photo {
                     .inner-full {
                         padding-top: 102px !important;
                     }
@@ -332,14 +331,14 @@
 
     .em-social-media-channels {
         a {
-            background: #000;
+            background: #033142;
             color: #FFF;
             border-radius: 50%;
-            border: 2px solid #000;
+            border: 2px solid #033142;
 
             &:hover {
                 background: #FFF;
-                color: #000;
+                color: #033142;
             }
         }
     }
@@ -350,11 +349,11 @@
         &:after {
             content: "";
             position: absolute;
-            bottom: -1px;
+            bottom: 0;
             left: 0;
             width: 100%;
-            height: 100px;
-            background-image: url(../../plugins/woocommerce/assets/img/bali-background-2.png);
+            height: 90px;
+            background-image: url(../img/bali-background-2.png);
             background-size: contain;
             background-repeat: repeat-x;
             z-index: 0;
