--- a/plugins/woocommerce/assets/css/style-wc-child.less
+++ b/plugins/woocommerce/assets/css/style-wc-child.less
@@ -40,7 +40,7 @@
 			top: 0;
 			left: 0;
 			width: 100%;
-			height: 100%;
+			height: 90%;
 			z-index: -10;
 
 			&:before {
@@ -50,11 +50,15 @@
 				left: 0;
 				width: 100%;
 				height: 100%;
-  				background-image: url("../img/bali-background.svg");
+  				background-image: url("../../../../assets/img/bali-background.svg");
   				background-size: contain;
   				background-repeat: repeat;
   				z-index: -5;
 			}
+		}
+
+		.em-hero-simple:after {
+			bottom: 10%;
 		}
 
 		/******** Product summary ********/
@@ -137,7 +141,7 @@
 		/******** Taxonomies layout ********/
 		#custom-taxonomies {
 			position: relative;
-  			background-image: url("../img/bali-background-4.jpg");
+  			background-image: url("../../../../assets/img/bali-background-4.jpg");
 			background-size: cover;
 			background-repeat: repeat-x;
 
@@ -147,8 +151,8 @@
 				bottom: 0;
 				left: 0;
 				width: 100%;
-				height: 100px;
-  				background-image: url("../img/bali-background-2.png");
+				height: 90px;
+  				background-image: url("../../../../assets/img/bali-background-2.png");
   				background-size: contain;
   				background-repeat: repeat-x;
   				z-index: 1;
@@ -172,7 +176,7 @@
 					right: 0;
 					width: 300px;
 					height: 200px;
-	  				background-image: url("../img/bali-background-3.svg");
+	  				background-image: url("../../../../assets/img/bali-background-3.svg");
 	  				background-size: contain;
 	  				background-repeat: no-repeat;
 	  				z-index: 2;
@@ -195,7 +199,7 @@
 						left: 0;
 						width: 100%;
 						height: 100%;
-		  				background-image: url("../img/bali-background.svg");
+		  				background-image: url("../../../../assets/img/bali-background.svg");
 		  				background-size: contain;
 		  				background-repeat: repeat;
 					}
@@ -228,7 +232,7 @@
 						left: 0;
 						width: 100%;
 						height: 100%;
-		  				background-image: url("../img/bali-background.svg");
+		  				background-image: url("../../../../assets/img/bali-background.svg");
 		  				background-size: contain;
 		  				background-repeat: repeat;
 					}
@@ -321,7 +325,7 @@
 			left: 0;
 			width: 100%;
 			height: 100%;
-			background-image: url("../img/bali-background.svg");
+			background-image: url("../../../../assets/img/bali-background.svg");
 			background-size: contain;
 			background-repeat: repeat;
 			-webkit-transition: all .6s ease;
