--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,7 +216,7 @@ h6 {
   position: relative;
   display: block;
   text-align: right;
-  padding-left: 100px;
+  padding-left: 5em;
   overflow: auto;
   float: right;
 }
@@ -268,8 +268,8 @@ h6 {
 .btn-line-left:before {
   content: "";
   position: absolute;
-  height: 3px;
-  width: 80px;
+  height: 0.1em;
+  width: 4em;
   background-color: #033142;
   top: 50%;
   left: 0;
@@ -617,7 +617,7 @@ body {
   letter-spacing: 0.05em;
   font-size: 20px;
   line-height: 1.6;
-  color: #000;
+  color: #033142;
   font-size: 14px;
 }
 @media all and (min-width: 360px) and (max-width: 480px) {
@@ -721,7 +721,7 @@ a:hover {
   padding: 10px;
   margin: 0;
   border-bottom: 1px solid #dedede;
-  color: #000;
+  color: #033142;
 }
 .fs_eichmeister .fs-dropdown-options button:last-child {
   border-bottom: 0;
@@ -784,7 +784,7 @@ header#main-header .shopping-cart-btn .em-shopping-cart {
   background-repeat: no-repeat;
 }
 header#main-header .shopping-cart-btn .cart-item-count {
-  background: #000;
+  background: #033142;
 }
 footer#main-footer {
   background-color: #0e1426;
@@ -794,12 +794,12 @@ footer#main-footer {
 footer#main-footer:after {
   content: "";
   position: absolute;
-  top: -1px;
+  top: 0;
   left: 0;
   width: 100%;
-  height: 40px;
+  height: 90px;
   transform: rotate(180deg);
-  background-image: url(../../plugins/woocommerce/assets/img/bali-background-2.png);
+  background-image: url(../img/bali-background-2.png);
   background-size: contain;
   background-repeat: repeat-x;
 }
@@ -876,10 +876,10 @@ footer#main-footer nav ul li a {
 footer#main-footer nav ul li a:hover {
   color: #999;
 }
-body.starts-with-hero #shop-archive-hero {
+body.starts-with-hero .em-hero-simple {
   margin-top: -102px !important;
 }
-body.starts-with-hero #shop-archive-hero .bg-photo .inner-full {
+body.starts-with-hero .em-hero-simple.bg-photo .inner-full {
   padding-top: 102px !important;
 }
 body div#main {
@@ -893,14 +893,14 @@ body.woocommerce-checkout .woocommerce {
   padding-top: 32px !important;
 }
 .em-social-media-channels a {
-  background: #000;
+  background: #033142;
   color: #FFF;
   border-radius: 50%;
-  border: 2px solid #000;
+  border: 2px solid #033142;
 }
 .em-social-media-channels a:hover {
   background: #FFF;
-  color: #000;
+  color: #033142;
 }
 .em-hero-simple {
   position: relative;
@@ -908,11 +908,11 @@ body.woocommerce-checkout .woocommerce {
 .em-hero-simple:after {
   content: "";
   position: absolute;
-  bottom: -1px;
+  bottom: 0;
   left: 0;
   width: 100%;
-  height: 100px;
-  background-image: url(../../plugins/woocommerce/assets/img/bali-background-2.png);
+  height: 90px;
+  background-image: url(../img/bali-background-2.png);
   background-size: contain;
   background-repeat: repeat-x;
   z-index: 0;
