--- a/plugins/woocommerce/assets/css/style-wc-child.css
+++ b/plugins/woocommerce/assets/css/style-wc-child.css
@@ -14,7 +14,7 @@ body.single-product .custom-background {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 90%;
   z-index: -10;
 }
 body.single-product .custom-background:before {
@@ -24,10 +24,13 @@ body.single-product .custom-background:before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../img/bali-background.svg");
+  background-image: url("../../../../assets/img/bali-background.svg");
   background-size: contain;
   background-repeat: repeat;
   z-index: -5;
+}
+body.single-product .em-hero-simple:after {
+  bottom: 10%;
 }
 body.single-product .summary {
   color: #FFF;
@@ -87,7 +90,7 @@ body.single-product .woocommerce-product-gallery img {
 }
 body.single-product #custom-taxonomies {
   position: relative;
-  background-image: url("../img/bali-background-4.jpg");
+  background-image: url("../../../../assets/img/bali-background-4.jpg");
   background-size: cover;
   background-repeat: repeat-x;
 }
@@ -97,8 +100,8 @@ body.single-product #custom-taxonomies:before {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 100px;
-  background-image: url("../img/bali-background-2.png");
+  height: 90px;
+  background-image: url("../../../../assets/img/bali-background-2.png");
   background-size: contain;
   background-repeat: repeat-x;
   z-index: 1;
@@ -120,7 +123,7 @@ body.single-product #custom-taxonomies:after {
     right: 0;
     width: 300px;
     height: 200px;
-    background-image: url("../img/bali-background-3.svg");
+    background-image: url("../../../../assets/img/bali-background-3.svg");
     background-size: contain;
     background-repeat: no-repeat;
     z-index: 2;
@@ -141,7 +144,7 @@ body.single-product #custom-taxonomies .region .region-background:before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../img/bali-background.svg");
+  background-image: url("../../../../assets/img/bali-background.svg");
   background-size: contain;
   background-repeat: repeat;
 }
@@ -168,7 +171,7 @@ body.single-product #custom-taxonomies .flavor .flavor-background:before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../img/bali-background.svg");
+  background-image: url("../../../../assets/img/bali-background.svg");
   background-size: contain;
   background-repeat: repeat;
 }
@@ -229,7 +232,7 @@ body.woocommerce.archive .shop-header a.active {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../img/bali-background.svg");
+  background-image: url("../../../../assets/img/bali-background.svg");
   background-size: contain;
   background-repeat: repeat;
   -webkit-transition: all 0.6s ease;
